--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,9 @@ body {
 
 /* Header, Banner and Footer Layout
 ================================ */
+#menu {
+	display: none;
+}
 
 .main-header {
 	padding: 15px;
